// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteOrRedirect redirects if condition is false 1`] = `
<div>
  Another Component
</div>
`;

exports[`RouteOrRedirect renders component if condition is true 1`] = `
<div>
  Test Component
</div>
`;
